Finishing migration to sessions

--- a/view/html/login.html
+++ b/view/html/login.html
@@ -33,7 +33,7 @@
           />
           <button type="submit">Log In</button>
           <p class="registerLink">
-            Don't have an account? <a href="singup.html">Register now</a>
+            Don't have an account? <a href="signup.html">Register now</a>
           </p>
         </form>
       </section>
