--- a/view/html/main.html
+++ b/view/html/main.html
@@ -15,7 +15,7 @@
         class="topPic"
       />
 
-      <a href="login.html" class="logoutIcon"
+      <a class="logoutIcon" id="logoutBtn"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
