Adding login and signup CSS

--- a/view/html/login.html
+++ b/view/html/login.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWebsite Login</title>
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/login_signup.css" />
     <script src="../assets/js/login.js"></script>
   </head>
   <body>
     <main class="container">
-      <aside class="leftPanel">
-        <img src="../assets/img/mountainVertical.jpg" alt="Imagen de fondo" />
-      </aside>
-      <section class="rightPanel">
-        <form id="loginForm" class="loginForm">
-          <h2>Welcome back!</h2>
+      <div class="card">
+        <form id="loginForm" class="form">
+          <h1>Welcome back!</h1>
           <label for="username"></label>
           <input
             type="text"
@@ -32,11 +29,11 @@
             required
           />
           <button type="submit">Log In</button>
-          <p class="registerLink">
+          <p class="link">
             Don't have an account? <a href="signup.html">Register now</a>
           </p>
         </form>
-      </section>
+      </div>
     </main>
   </body>
   <!-- <footer>
