Adding CSS to home page

--- a/view/html/main.html
+++ b/view/html/main.html
@@ -60,11 +60,56 @@
     </header>
     <nav>
       <div class="navText">
-        <h1>Hecho para <span>llevar.</span><br>Diseñado para <span>destacar.</span></h1>
+        <h1>
+          Hecho para <span>llevar.</span><br />Diseñado para
+          <span>destacar.</span>
+        </h1>
         <button>Contáctenos</button>
       </div>
     </nav>
-    <main>main</main>
+    <main>
+      <aside>
+        <p>
+          <img src="../assets/img/storeOutside.jpg" />
+        </p>
+      </aside>
+      <article>
+        <h2 class="articleHeading">Sobre Nosotros</h2>
+        <br />
+        <p class="articleBody">
+          Somos una tienda de ropa creada con la idea de que el estilo es una
+          forma de expresión personal. Creemos que la manera de vestir habla de
+          quién eres y cómo te sientes, por eso diseñamos prendas que combinan
+          comodidad, diseño y carácter. Cada colección nace pensando en personas
+          reales, en su ritmo diario y en la necesidad de sentirse bien con lo
+          que llevan puesto.<br />
+          <br />
+
+          Cuidamos cada detalle del proceso, desde la selección de materiales
+          hasta el acabado final de cada prenda. Apostamos por la calidad, la
+          durabilidad y un diseño actual que no dependa solo de modas pasajeras.
+          Nuestro objetivo es ofrecer ropa versátil, capaz de adaptarse a
+          distintos momentos y estilos sin perder identidad. <br />
+          <br />
+
+          Más que una tienda, queremos ser una marca cercana con la que nuestros
+          clientes se sientan identificados. Valoramos la autenticidad, la
+          confianza y la creatividad, y trabajamos cada día para que nuestra
+          ropa ayude a expresar personalidad y actitud. Porque vestir bien no es
+          seguir reglas, es sentirse uno mismo.
+        </p>
+      </article>
+      <section>
+        <h2 class="articleHeading">Nuestros Productos</h2>
+        <br />
+        <div class="productScrollSection">
+          <div class="productCard">f</div>
+          <div class="productCard">f</div>
+          <div class="productCard">f</div>
+          <div class="productCard">f</div>
+        </div>
+      </section>
+    </main>
     <footer>footer</footer>
   </body>
 </html>
