Basic PHP endpoints added

--- a/view/html/main.html
+++ b/view/html/main.html
@@ -101,7 +101,7 @@
       </article>
       <section>
         <h2 class="articleHeading">Nuestros Productos</h2>
-        <br />
+        <br/>
         <div class="productScrollSection">
           <div class="productCard">f</div>
           <div class="productCard">f</div>
@@ -110,6 +110,6 @@
         </div>
       </section>
     </main>
-    <footer>footer</footer>
+    <footer>© 2026 - El Corte Ingles</footer>
   </body>
 </html>
