--- a/view/assets/css/home.css
+++ b/view/assets/css/home.css
@@ -93,7 +93,17 @@ nav {
   border: 0px;
   border-radius: 50px;
   cursor: pointer;
+
+  transition: 
+    transform 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out;
 }
+
+.navText button:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
 
 main {
   background-color: var(--main-background-color);
@@ -158,6 +168,7 @@ aside img {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
+  padding: 10px;
 }
 
 .productCard {
@@ -169,7 +180,18 @@ aside img {
   padding: 1%;
   margin-left: 0.5%;
   margin-right: 0.5%;
+  cursor: pointer;
+
+  transition: 
+    transform 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out;
 }
+
+.productCard:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
 
 footer {
   background-color: black;
