--- a/view/html/main.html
+++ b/view/html/main.html
@@ -103,12 +103,7 @@
       <section>
         <h2 class="articleHeading">Nuestros Productos</h2>
         <br />
-        <div class="productScrollSection">
-          <div class="productCard">f</div>
-          <div class="productCard">f</div>
-          <div class="productCard">f</div>
-          <div class="productCard">f</div>
-        </div>
+        <div class="productScrollSection"></div>
       </section>
 
       <!-- The Modal -->
@@ -369,6 +364,6 @@
         </div>
       </div>
     </main>
-    <footer>© 2026 - El Corte Ingles</footer>
+    <footer>© 2026 - El Corte Americano</footer>
   </body>
 </html>
