--- a/view/html/main.html
+++ b/view/html/main.html
@@ -10,64 +10,64 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="../assets/img/logo.png" class="logo" />
-      </div>
-      <div class="headerButtons">
-        <div id="adjustData">
-          <svg
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-          >
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
-            <g id="SVGRepo_iconCarrier">
-              <path
-                stroke="#000000"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
-              ></path>
-              <path
-                stroke="#000000"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M10.47 4.32c.602-1.306 2.458-1.306 3.06 0l.218.473a1.684 1.684 0 0 0 2.112.875l.49-.18c1.348-.498 2.66.814 2.162 2.163l-.18.489a1.684 1.684 0 0 0 .875 2.112l.474.218c1.305.602 1.305 2.458 0 3.06l-.474.218a1.684 1.684 0 0 0-.875 2.112l.18.49c.498 1.348-.814 2.66-2.163 2.162l-.489-.18a1.684 1.684 0 0 0-2.112.875l-.218.473c-.602 1.306-2.458 1.306-3.06 0l-.218-.473a1.684 1.684 0 0 0-2.112-.875l-.49.18c-1.348.498-2.66-.814-2.163-2.163l.181-.489a1.684 1.684 0 0 0-.875-2.112l-.474-.218c-1.305-.602-1.305-2.458 0-3.06l.474-.218a1.684 1.684 0 0 0 .875-2.112l-.18-.49c-.498-1.348.814-2.66 2.163-2.163l.489.181a1.684 1.684 0 0 0 2.112-.875l.218-.474Z"
-              ></path>
-            </g>
-          </svg>
+      <nav>
+        <div>
+          <img src="../assets/img/logo.png" class="logo" />
         </div>
-        <div id="logoutBtn">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15M12 9l-3 3m0 0 3 3m-3-3h12.75"
-            />
-          </svg>
+        <div class="navButtons">
+          <div id="adjustData">
+            <svg
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  stroke="#000000"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+                ></path>
+                <path
+                  stroke="#000000"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M10.47 4.32c.602-1.306 2.458-1.306 3.06 0l.218.473a1.684 1.684 0 0 0 2.112.875l.49-.18c1.348-.498 2.66.814 2.162 2.163l-.18.489a1.684 1.684 0 0 0 .875 2.112l.474.218c1.305.602 1.305 2.458 0 3.06l-.474.218a1.684 1.684 0 0 0-.875 2.112l.18.49c.498 1.348-.814 2.66-2.163 2.162l-.489-.18a1.684 1.684 0 0 0-2.112.875l-.218.473c-.602 1.306-2.458 1.306-3.06 0l-.218-.473a1.684 1.684 0 0 0-2.112-.875l-.49.18c-1.348.498-2.66-.814-2.163-2.163l.181-.489a1.684 1.684 0 0 0-.875-2.112l-.474-.218c-1.305-.602-1.305-2.458 0-3.06l.474-.218a1.684 1.684 0 0 0 .875-2.112l-.18-.49c-.498-1.348.814-2.66 2.163-2.163l.489.181a1.684 1.684 0 0 0 2.112-.875l.218-.474Z"
+                ></path>
+              </g>
+            </svg>
+          </div>
+          <div id="logoutBtn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15M12 9l-3 3m0 0 3 3m-3-3h12.75"
+              />
+            </svg>
+          </div>
         </div>
-      </div>
-    </header>
-    <nav>
-      <div class="navText">
+      </nav>
+      <div class="headerText">
         <h1>
           Hecho para <span>llevar.</span><br />Diseñado para
           <span>destacar.</span>
         </h1>
-        <button>Contáctenos</button>
+        <button id="contactButton">Contáctenos</button>
       </div>
-    </nav>
+    </header>
     <main>
       <aside>
         <p>
@@ -106,7 +106,7 @@
         <div class="productScrollSection"></div>
       </section>
 
-      <!-- The Modal -->
+      <!-- Modals/Popups -->
       <div id="adminTableModal" class="adminTableModal">
         <!-- Modal content -->
         <div class="adminTableModalContent">
@@ -361,6 +361,70 @@
             <button type="submit">Confirm</button>
           </form>
           <div id="passwordMessage" class="passwordMessage"></div>
+        </div>
+      </div>
+
+      <div id="modifyCompanyPopup" class="modifyAdminPopup">
+        <div class="popupCard">
+          <form class="loginForm profileForm" id="profileForm">
+            <div class="fields">
+              <div class="field half">
+                <label for="username">Username</label>
+                <input
+                  id="usernameAdmin"
+                  name="username"
+                  type="text"
+                  placeholder="Example"
+                  disabled
+                />
+              </div>
+
+              <div class="field half">
+                <label for="password">Password</label>
+                <button
+                  type="button"
+                  id="changePwdBtnAdmin"
+                  class="changePwdBtn"
+                >
+                  Change Password
+                </button>
+              </div>
+              <div class="field half">
+                <label for="phone">Phone Number</label>
+                <input
+                  id="phoneAdmin"
+                  name="phone"
+                  type="number"
+                  placeholder="000-000-0000"
+                />
+              </div>
+              <div class="field half">
+                <label for="profileCode">Profile Code</label>
+                <input
+                  id="profileCodeAdmin"
+                  name="profileCode"
+                  type="tel"
+                  placeholder="x"
+                  disabled="disabled"
+                />
+              </div>
+              <div class="field full">
+                <label for="accountNumber">Account Number</label>
+                <input
+                  id="currentAccountAdmin"
+                  name="accountNumber"
+                  type="text"
+                  placeholder="XXXX-XXXX-XXXX-XXXX"
+                />
+              </div>
+            </div>
+            <span style="color: green" ; id="messageAdmin"></span>
+            <div class="actions">
+              <button id="saveBtnAdmin" class="saveBtn" type="button">
+                Save Data
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </main>
