Adding product modification logic

--- a/view/html/main.html
+++ b/view/html/main.html
@@ -384,10 +384,9 @@
             <div class="pictureInput">
               <input
                 type="file"
-                name="image"
+                name="productImageInput"
                 id="productImageInput"
                 accept="image/*"
-                required
               />
             </div>
             <div class="name">
