--- a/view/assets/css/home.css
+++ b/view/assets/css/home.css
@@ -705,6 +705,18 @@ footer {
   display: block;
 }
 
+.addProductCard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.addProductPlus {
+  color: var(--company-color);
+  font-weight: bold;
+  font-size: 50px;
+}
+
 /*MEDIA QUERIES*/
 /* Pantallas pequeñas (móviles) */
 @media (max-width: 600px) {
